# livefork

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
docs/plans/: 2026-03-18-livefork-initial.md  2026-04-02-livefork-toml-lost-during-knit-rebuild.md
src/livefork/: __init__.py  agent_context.py  cli.py  config.py  draft_format.py  draft_llm.py  git.py  knit.py  readme.py  state.py  sync.py
src/livefork/templates/: fork-readme.md.j2
tests/: conftest.py  test_agent_context.py  test_cli.py  test_config.py  test_draft_cli.py  test_draft_format.py  test_draft_llm.py  test_git.py  test_integration.py  test_knit.py  test_readme.py  test_state.py  test_sync.py
